170131 for NESSF application

--- a/xwang_cv.tex
+++ b/xwang_cv.tex
@@ -4,19 +4,17 @@
 % itself based on Alessandro Plasmati's cv template:
 % http://www.scribd.com/doc/16335667/Writing-your-Professional-CV-with-LaTeX
 %--------------------------------------------------------------------------------------------------------------------------------
-\documentclass[11pt]{article}
+\documentclass[letterpaper,10pt]{article}
 
 \usepackage{geometry}
-\geometry{letterpaper,tmargin=1cm,bmargin=1cm,lmargin=0.5cm,rmargin=1cm,headheight=0in,headsep=0in,footskip=0in}
+\geometry{letterpaper,tmargin=1in,bmargin=1in,lmargin=1in,rmargin=1in,headheight=0in,headsep=0in,footskip=0in}
+%\geometry{letterpaper,tmargin=1cm,bmargin=1cm,lmargin=0.5cm,rmargin=1cm,headheight=0in,headsep=0in,footskip=0in}
 % US letter layout
-\setlength{\paperwidth}{8.5in}
-\setlength{\paperheight}{11in}
+%\setlength{\paperwidth}{8.5in}
+%\setlength{\paperheight}{11in}
 % A4 paper layout
 %\setlength{\paperwidth}{21cm}
 %\setlength{\paperheight}{29.7cm}
-
-%\setlength{\textheight}{10.5in}
-%\setlength{\textheight}{13.5in}
 
 %\usepackage[latin1]{inputenc}
 \usepackage{marvosym}
@@ -60,13 +58,13 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\vspace{-1em}
-\section{Personal Information}
-\begin{tabular}{rl}
+%\section{Personal Information}
+%\begin{tabular}{rl}
 %    \textsc{Date and Place of Birth:}       & September 1$^{\rm st}$, 1988  |  Tianjin, China \\
-    \textsc{Current Status:}  & Graduate Student at University of California, Los Angeles \\
-    \textsc{E-mail, Cell and Skype Account:}  & \href{mailto:albertfxwang@gmail.com}{albertfxwang@gmail.com}  |  +1-805-574-0025  |  albertfxwang \\
-    \textsc{Mailing Address:} & 3251 S. Sepulveda Blvd., Apt. 307, Los Angeles, CA 90034, the USA \\
-\end{tabular}
+%    \textsc{Current Status:}  & Graduate Student at University of California, Los Angeles \\
+%    \textsc{E-mail, Cell and Skype Account:}  & \href{mailto:albertfxwang@gmail.com}{albertfxwang@gmail.com}  |  +1-805-574-0025  |  albertfxwang \\
+%    \textsc{Mailing Address:} & 3251 S. Sepulveda Blvd., Apt. 307, Los Angeles, CA 90034, the USA \\
+%\end{tabular}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\vspace{-0.5cm}
@@ -75,7 +73,8 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Education}
-\begin{tabular}{r|p{17.5cm}}
+\begin{tabular}{r|p{5.5in}}
+%\begin{tabular}{r|p{17.5cm}}
   %--------------------------------------------------------
   \textsc{Sept. 2015}--      &   Department of Physics and Astronomy, UCLA    |   \textbf{Towards Ph.D. in Astrophysics (Jun. 2019)}   \\
   \textsc{Present}
@@ -83,7 +82,7 @@
   &   \texttt{Advisor: Prof. Tommaso Treu}     \\
   \multicolumn{2}{c}{} \\
   %--------------------------------------------------------
-  \textsc{Sept. 2013}--      &   Physics Department, UCSB    |   \textbf{M.A. in Physics with Astrophysics Emphasis (Jun. 2015)}   \\
+  \textsc{Sept. 2013}--      &   Physics Department, UCSB    |   \textbf{M.A. in Physics (Jun. 2015)}   \\
   \textsc{Sept. 2015}
   &   \texttt{Advisor: Prof. Tommaso Treu}; \quad Cumulative Total (Grad) GPA: 3.96     \\
   \multicolumn{2}{c}{} \\
@@ -91,7 +90,7 @@
   \textsc{Sept. 2010}--     &   School of Astronomy and Space Sciences, Nanjing University  |  \textbf{M.Sc. in Astrophysics (Jun. 2013)}   \\
   \textsc{May 2013}
   & Field of Interest: Precision Cosmology, Galaxy Clusters, Primordial Power Spectrum. \\
-  & \texttt{Advisors: Profs. Gong-Bo Zhao, Charling Tao, Tong-Jie Zhang, Y. F. Huang, Hu Zhan}   \\
+  & \texttt{Advisors: Profs. Gong-Bo Zhao, Charling Tao, Tong-Jie Zhang, Y. F. Huang}   \\
   \multicolumn{2}{c}{} \\
   %--------------------------------------------------------
   \textsc{Sept. 2006}--     &   Department of Astronomy, Nanjing University  |  \textbf{B.Sc. in Astronomy (Jun. 2010)}    \\
@@ -103,7 +102,8 @@
 \vspace{1em}
 \section{Research Experience}
 \vspace{-1ex}
-\begin{longtable}{r|p{17cm}}
+\begin{longtable}{r|p{5.5in}}
+%\begin{longtable}{r|p{17cm}}
   %--------------------------------------------------------
   \textsc{Sept. 2013}--  &   \emph{Title: The Grism Lens-Amplified Survey from Space (GLASS) Project}   \\
   \textsc{Present}       &   \small{\textit{GLASS} is a cycle-21 HST Large Program allocated 140 orbits of Grism spectroscopy
@@ -172,7 +172,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \vspace{1em}
 \section{Publications and Activities}
-\begin{longtable}{p{17cm}}
+\begin{longtable}{p{6in}}
+%\begin{longtable}{p{17cm}}
 \multicolumn{1}{c}{\textsc{Selected Papers in Refereed Academic Journals}}      \\
 \vspace{-0.3cm}
 \begin{list}{\labelitemi}{\leftmargin=0.5em}
@@ -204,7 +205,8 @@
 
 \vspace{-2em}
 
-\begin{longtable}{r|p{16.5cm}}
+\begin{longtable}{r|p{5.5in}}
+%\begin{longtable}{r|p{16.5cm}}
 
     \multicolumn{2}{c}{\textsc{Selected Academic Activities}}  \\
     \multicolumn{2}{c}{} \\
@@ -240,7 +242,7 @@ General Assembly}, Honolulu, HI     \\
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Awards and Honors (selected)}
-\begin{tabular}{rl}
+\begin{tabular}{rp{5in}}
 ~~~~~~\textsc{Apr. 2015} & AAS International Travel Grant (\$1k)    \\
 ~~~~~~\textsc{Jun. 2014} & 1$^{\rm st}$ Prize for Excellent M.Sc. Thesis amongst all Universities and Colleges in Jiangsu Province   \\
 ~~~~~~\textsc{Dec. 2012} & National Scholarship for Graduates   \\
@@ -261,7 +263,8 @@ General Assembly}, Honolulu, HI     \\
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \vspace{1em}
 \section{Working Experience}
-\begin{tabular}{rp{16cm}}
+\begin{tabular}{rp{5.5in}}
+%\begin{tabular}{rp{16cm}}
 \textsc{Dec. 2010}--  & Organizer of Graduate Journal Club in School of Astronomy and Space Sciences, Nanjing University \\
 \textsc{Dec. 2011}    & \small{In total, we have arranged 17 meetings, and invited 34 speakers, most of which are graduate students. The majority of the speakers come from our school, while we do have speakers from many other institutes, e.g., Purple Mountain Observatory, University of Science and Technology of China, University of Sydney. The topics are related to the major field of interest of the speakers, who will also share with participants some academic experience in doing scientific research. This activity is financially supported by our school.}  \\
 %\multicolumn{2}{c}{} \\
