--- a/xwang_cv.tex
+++ b/xwang_cv.tex
@@ -56,15 +56,15 @@
 %  \\ Telecommunications Engineer, MSc. \bigskip    sub-title
 \par}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\vspace{-1em}
-%\section{Personal Information}
-%\begin{tabular}{rl}
-%    \textsc{Date and Place of Birth:}       & September 1$^{\rm st}$, 1988  |  Tianjin, China \\
-%    \textsc{Current Status:}  & Graduate Student at University of California, Los Angeles \\
-%    \textsc{E-mail, Cell and Skype Account:}  & \href{mailto:albertfxwang@gmail.com}{albertfxwang@gmail.com}  |  +1-805-574-0025  |  albertfxwang \\
-%    \textsc{Mailing Address:} & 3251 S. Sepulveda Blvd., Apt. 307, Los Angeles, CA 90034, the USA \\
-%\end{tabular}
+\section{Personal Information}
+\begin{tabular}{rl}
+    \textsc{Date and Place of Birth:}       & September 1$^{\rm st}$, 1988  |  Tianjin, China \\
+    \textsc{Current Status:}  & Graduate Student at University of California, Los Angeles \\
+    \textsc{E-mail, Cell and Skype Account:}  & \href{mailto:albertfxwang@gmail.com}{albertfxwang@gmail.com}  |  +1-805-574-0025  |  albertfxwang \\
+    \textsc{Mailing Address:} & 3251 S. Sepulveda Blvd., Apt. 307, Los Angeles, CA 90034, USA \\
+\end{tabular}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\vspace{-0.5cm}
@@ -78,7 +78,8 @@
   %--------------------------------------------------------
   \textsc{Sept. 2015}--      &   Department of Physics and Astronomy, UCLA    |   \textbf{Towards Ph.D. in Astrophysics (Jun. 2019)}   \\
   \textsc{Present}
-  & Field of Interest: Chemical Evolution of Galaxies, Nebular Emission Spectroscopy, Strong Gravitational Lensing. \\
+  & Field of Interest: Spatially Resolved Spectroscopy, Chemical Evolution of 
+  Galaxies, Extragalactic Nebular Emission, Strong Gravitational Lensing. \\
   &   \texttt{Advisor: Prof. Tommaso Treu}     \\
   \multicolumn{2}{c}{} \\
   %--------------------------------------------------------
@@ -90,7 +91,7 @@
   \textsc{Sept. 2010}--     &   School of Astronomy and Space Sciences, Nanjing University  |  \textbf{M.Sc. in Astrophysics (Jun. 2013)}   \\
   \textsc{May 2013}
   & Field of Interest: Precision Cosmology, Galaxy Clusters, Primordial Power Spectrum. \\
-  & \texttt{Advisors: Profs. Gong-Bo Zhao, Charling Tao, Tong-Jie Zhang, Y. F. Huang}   \\
+  & \texttt{Advisors: Profs. Y. F. Huang, Charling Tao, Gong-Bo Zhao}   \\
   \multicolumn{2}{c}{} \\
   %--------------------------------------------------------
   \textsc{Sept. 2006}--     &   Department of Astronomy, Nanjing University  |  \textbf{B.Sc. in Astronomy (Jun. 2010)}    \\
@@ -112,7 +113,7 @@
   galaxies play in the process of reionization? 2) Why and how is galaxy evolution environmental dependent? 3) How do metals cycle
   in and out of galaxies and what's the interplay between cycling of metals and SF activities?}   \\
   & \textbf{Project in progress and scientific products: 
-        \hyperlink{16.wang.apj}{Wang et al. (2016)},
+        \hyperlink{17.wang.apj}{Wang et al. (2017)},
         \hyperlink{15.wang.apj}{Wang et al. (2015)},
         \hyperlink{15.jones.aj}{Jones et al. (2015)}} \\
   \multicolumn{2}{c}{} \\
@@ -170,7 +171,7 @@
 \end{longtable}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\vspace{1em}
+%\vspace{1em}
 \section{Publications and Activities}
 \begin{longtable}{p{6in}}
 %\begin{longtable}{p{17cm}}
@@ -191,9 +192,9 @@
     \item[4]\hypertarget{15.wang.apj}{} \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) IV. 
         Mass reconstruction of the lensing cluster Abell 2744 from frontier field imaging and GLASS spectroscopy. 2015, 
         \textit{Astrophys. J.}, 811, 29 (\href{http://arxiv.org/abs/1504.02405}{arXiv:1504.02405})
-    \item[5]\hypertarget{16.wang.apj}{} \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) X.
-        Sub-kpc resolution gas-phase metallicity maps at cosmic noon behind the Hubble Frontier Fields cluster MACS1149.6+2223. 
-        2016, submitted to ApJ (\href{http://arxiv.org/abs/1610.07558}{arXiv:1610.07558})
+    \item[5]\hypertarget{17.wang.apj}{} \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) X.
+        Sub-kiloparsec resolution gas-phase metallicity maps at cosmic noon behind the Hubble Frontier Fields cluster MACS1149.6+2223. 
+        2017, \textit{Astrophys. J.}, 837, 89 (\href{http://arxiv.org/abs/1610.07558}{arXiv:1610.07558})
 \end{list}  \\
 %\multicolumn{1}{c}{\textsc{Conference Contributions, Unrefereed}}    \\
 %\vspace{-0.4cm}
@@ -217,18 +218,28 @@
 %            &   \emph{Title: On the Counter-Jet Emission in GRB Afterglows}     \\
 %\multicolumn{2}{c}{} \\
 
-%    \textsc{Jun. 2010}   &   \textbf{Presented a talk}, @ \href{http://www.physics.hku.hk/~astro/2010Astro/Index.htm}{A mini-workshop on ``Gamma-ray Sky from Fermi: Neutron Stars and their Environment''}, University of Hong Kong, Hong Kong   \\
-%    \multicolumn{2}{c}{} \\
+    \textsc{Jun. 2010}   &   \textbf{Presented a talk}, @ \href{http://www.physics.hku.hk/~astro/2010Astro/Index.htm}{A mini-workshop on ``Gamma-ray Sky from Fermi: Neutron Stars and their Environment''}, University of Hong Kong, Hong Kong   \\
+    \multicolumn{2}{c}{} \\
 
 %\textsc{Jul. 2011}   &   Member of LOC, @ \href{http://lss.bao.ac.cn/meeting/lens11/}{Summer School \& Workshop: Weak and Strong Gravitational Lensing}, NAOC, Beijing  \\
 %\multicolumn{2}{c}{} \\
 
-    \textsc{Nov. 2012}   &   \textbf{Presented a talk}, @ \href{http://www.thca.tsinghua.edu.cn/en/index.php/Workshop_programme}{Tsinghua Transient Workshop 2012}, Tsinghua University, Beijing   \\
+%    \textsc{Nov. 2012}   &   \textbf{Presented a talk}, @ \href{http://www.thca.tsinghua.edu.cn/en/index.php/Workshop_programme}{Tsinghua Transient Workshop 2012}, Tsinghua University, Beijing   \\
 %            &   \emph{Title: Observational constraints on cosmic neutrinos and dark energy revisited}    \\
-    \multicolumn{2}{c}{} \\
+%    \multicolumn{2}{c}{} \\
 
     \textsc{Aug. 2015}   &   \textbf{Presented a talk}, @ \href{http://hffiau.epfl.ch/page-116896.html}{Focus Meeting 22 at XXIX IAU
 General Assembly}, Honolulu, HI     \\
+    \multicolumn{2}{c}{} \\
+
+    \textsc{Jun. 2017}   &   \textbf{Presented a talk}, @ 
+    \href{http://eas.unige.ch/EWASS2017/session.jsp?id=SS11}{Special Session 11 at 
+    European Week of Astronomy and Space Science}, Prague, Czech Republic   \\
+    \multicolumn{2}{c}{} \\
+
+    \textsc{Jul. 2017}   &   \textbf{Presented a talk}, @
+    \href{http://darkuniverse2017.csp.escience.cn/dct/page/65580}{Shedding Light on 
+    the Dark Universe with Extremely Large Telescopes}, Lanzhou, China      \\
 
 \end{longtable}
 
@@ -266,8 +277,15 @@ General Assembly}, Honolulu, HI     \\
 \begin{tabular}{rp{5.5in}}
 %\begin{tabular}{rp{16cm}}
 \textsc{Dec. 2010}--  & Organizer of Graduate Journal Club in School of Astronomy and Space Sciences, Nanjing University \\
-\textsc{Dec. 2011}    & \small{In total, we have arranged 17 meetings, and invited 34 speakers, most of which are graduate students. The majority of the speakers come from our school, while we do have speakers from many other institutes, e.g., Purple Mountain Observatory, University of Science and Technology of China, University of Sydney. The topics are related to the major field of interest of the speakers, who will also share with participants some academic experience in doing scientific research. This activity is financially supported by our school.}  \\
-%\multicolumn{2}{c}{} \\
+\textsc{Dec. 2011}    & \small{In total, I arranged 17 meetings, and invited 
+34 speakers.
+%most of which are graduate students. The majority of the speakers come from our school, while we do have speakers from many other institutes, e.g., Purple Mountain Observatory, University of Science and Technology of China, University of Sydney. 
+The topics are related to the major field of interest of the speakers, who will also share with participants some academic experience in doing scientific research. This activity is financially supported by our school.}  \\
+\multicolumn{2}{c}{} \\
+\textsc{Jun. 2014}--  & Organizer of Treu Group Meeting, UCSB \& UCLA \\
+\textsc{Jun. 2015}    & \small{I organized the weekly group meetings of my 
+advisor's.}     \\
+
 %\textsc{\small Sept.--Dec. 2010}  & Teaching Assistant of Theoretical Astrophysics (senior undergraduate course taught by Prof. Z. G. Dai) \\
 %\multicolumn{2}{c}{} \\
 %\textsc{2010--2012}  & Vice-President and Director of Study Department of Graduate Student Union in School of Astronomy and Space Sciences, Nanjing University\\
